--- a/index.html
+++ b/index.html
@@ -3,7 +3,4 @@
 <p>git diff</p>
 <p>git commit --amend</p>
 <p>git merge</p>
-<<<<<<< HEAD
-<p>git merge</p>
-=======
->>>>>>> feature
+<p>コンフリクト</p>
